<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I am a button</string>
    <string name="HeaderText">Here are my widgets:</string>
    <string name="ButtonText2">Button</string>
    <string name="CheckText">Check this out!</string>
    <string name="SwitchText">Switch on / off</string>
    <string name="HintText">Type your answer here</string>
    <string name="ImageBtnDescription">National Flag</string>
    <string name="email_notification">Enter your Email address:</string>
    <string name="password_notification">Type your password:</string>
    <string name="email_hint">Type email here</string>
    <string name="login_button_text">LOGIN</string>
    <string name="preference_file_key">FileName</string>
    <string name="preference_reserved_email">EmailAddress</string>
    <string name="profile_header_label">Your profile</string>
    <string name="profile_name_label">Your name:</string>
    <string name="profile_email_label">Your email:</string>
    <string name="profile_picure_label">Your picture:</string>
    <string name="name_hint">Type your name here</string>
    <string name="take_picture_hint">Click the button above to take a picture</string>
    <string name="ButtonText_GoToChat">Go to chat</string>
    <string name="ButtonText_Send">Send</string>
    <string name="ButtonText_Receive">Receive</string>
    <string name="HintText_chat">Type here</string>
    <string name="ButtonText_GoToToolbar">Go to Toolbar Page</string>
    <string name="menu_title_choice1">Choice 1</string>
    <string name="menu_title_choice2">Choice 2</string>
    <string name="menu_title_choice3">Choice 3</string>
    <string name="menu_title_choice4">Choice 4</string>
    <string name="menu_title_choice1_msg">This is the initial message</string>
    <string name="menu_title_choice4_msg">You clicked on the overflow menu</string>
    <string name="prompt_msg">Go Back?</string>
    <string name="prompt_msg_yes">Yes</string>
    <string name="extra_new_msg">What is your new message?</string>
    <string name="extra_new_msg_hint">Type here</string>



</resources>
