<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuChoice1"
        android:icon="@drawable/icons8_settings_16"
        android:orderInCategory="100"
        android:title="@string/menu_title_choice1"
        app:showAsAction="always" />
    <item
        android:id="@+id/menuChoice2"
        android:icon="@drawable/icons8_services_16"
        android:orderInCategory="100"
        android:title="@string/menu_title_choice2"
        app:showAsAction="always" />
    <item
        android:id="@+id/menuChoice3"
        android:icon="@drawable/icons8_support_16"
        android:orderInCategory="100"
        android:title="@string/menu_title_choice3"
        app:showAsAction="always" />
    <item
        android:id="@+id/menuChoice4"
        android:icon="@drawable/icons8_puzzle_16"
        android:orderInCategory="100"
        android:title="@string/menu_title_choice4"
        app:showAsAction="never" />
</menu>