<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:columnCount="2">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/HeaderText"
        android:textSize="30sp"
        app:layout_columnSpan="2"
        app:layout_columnWeight="1"
        app:layout_row="0" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ButtonText2"
        app:layout_column="0"
        app:layout_row="1"
        app:layout_columnWeight="1"/>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/ImageBtnDescription"
        app:layout_column="1"
        app:layout_row="1"
        app:srcCompat="@drawable/flag"
        app:layout_columnWeight="1"/>

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SwitchText"
        app:layout_column="1"
        app:layout_columnWeight="1"
        app:layout_row="2" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CheckText"
        app:layout_column="0"
        app:layout_row="2"
        app:layout_columnWeight="1"/>

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/HintText"
        app:layout_column="0"
        app:layout_columnSpan="2"
        app:layout_row="3"
        app:layout_columnWeight="1"
        android:autofillHints="@string/HintText"/>
</android.support.v7.widget.GridLayout>